@startuml

title __LAB2A's Class Diagram__\n

class Controller.CarController {
    ~ cars : ArrayList<MotorizedVehicle>
    {static} + main()
    + setInBounds()
}

class View.GUI.CarView {
    {static} - X : int
    {static} - Y : int
    - initComponents()
}

class View.GUI.DrawPanel {
    ~ carImages : ArrayList<BufferedImage>
    ~ carPoints : ArrayList<Point>
    # paintComponent()
    ~ moveit()
}

class Model.Car {
}

class Model.CarCarrierTruck {
    - isRampUp : boolean
    + closeEnough()
    + getTransporterStorageList()
    + loadTransportable()
    + lowerRamp()
    + move()
    + raiseRamp()
    + setCurrentSpeed()
    + setX()
    + setY()
    + transportableFits()
    + transporterIsNotFull()
    + unloadTransportable()
    + updateStoredObjectsPosition()
}

class Model.FlatbedTruck {
    - flatbedAngle : int
    - flatbedAngleMax : int
    + getFlatbedAngle()
    + lowerFlatbed()
    + raiseFlatbed()
    + setCurrentSpeed()
    + setFlatbedAngle()
}

interface Model.IMovable {
    {abstract} + getCurrentDirection()
    {abstract} + getCurrentSpeed()
    {abstract} + move()
    {abstract} + setCurrentDirection()
    {abstract} + setCurrentSpeed()
    {abstract} + setX()
    {abstract} + setY()
    {abstract} + turnLeft()
    {abstract} + turnRight()
}

interface Model.IPositionable {
    {abstract} + getX()
    {abstract} + getY()
}

interface Model.ITransportable {
    {abstract} + getHeightMeter()
    {abstract} + getLengthMeter()
    {abstract} + getWidthMeter()
}

interface Model.ITransportableHolder {
    {abstract} + closeEnough()
    {abstract} + loadTransportable()
    {abstract} + transportableFits()
    {abstract} + transporterIsNotFull()
    {abstract} + unloadTransportable()
}

class Model.MANTGXD38 {
}

class Model.MotorizedVehicle {
    + brake()
    + decrementSpeed()
    + gas()
    + incrementSpeed()
    + setCurrentSpeed()
    + startEngine()
    + stopEngine()
    # speedFactor()
}

abstract class Model.Movable {
    - currentSpeed : double
    - x : double
    - y : double
    + getCurrentDirection()
    + getCurrentSpeed()
    + getX()
    + getY()
    + move()
    + setCurrentDirection()
    + setCurrentSpeed()
    + setX()
    + setY()
    + turnLeft()
    + turnRight()
}

class Model.Saab95 {
    - turboOn : boolean
    + setTurboOff()
    + setTurboOn()
    # speedFactor()
}

class Model.Scania {
    # speedFactor()
}

class Model.TransportableHolder {
    # transporterStorageList : Deque<T>
    # x : double
    # y : double
    - isLoadingPointOpen : boolean
    - maxStoredObjects : int
    - maxTransportableHeight : double
    - maxTransportableLength : double
    - maxTransportableWidth : double
    + TransportableHolder()
    + closeEnough()
    + closeLoadingPoint()
    + getX()
    + getY()
    + loadTransportable()
    + openLoadingPoint()
    + transportableFits()
    + transporterIsNotFull()
    + unloadTransportable()
    + updateStoredObjectsPosition()
}

class Model.Volvo240 {
    {static} - trimFactor : double
    # speedFactor()
}

class Model.Workshop {
    + closeEnough()
    + closeLoadingPoint()
    + getTransporterStorageList()
    + getX()
    + getY()
    + loadTransportable()
    + openLoadingPoint()
    + transportableFits()
    + transporterIsNotFull()
    + unloadTransportable()
}

Controller.CarController o-- View.GUI.CarView : frame
View.GUI.CarView -up-|> javax.swing.JFrame
View.CarView o-- Controller.CarController : carC
View.CarView o-- View.GUI.DrawPanel : drawPanel
View.GUI.DrawPanel -up-|> javax.swing.JPanel
Model.Car .up.|> Model.ITransportable
Model.Car -up-|> Model.MotorizedVehicle
Model.CarCarrierTruck .up.|> Model.ITransportableHolder
Model.CarCarrierTruck -up-|> Model.MotorizedVehicle
Model.CarCarrierTruck o-- Model.TransportableHolder : transportableHolderParent
Model.FlatbedTruck -up-|> Model.MotorizedVehicle
Model.MANTGXD38 -up-|> Model.CarCarrierTruck
Model.MotorizedVehicle -up-|> Model.Movable
Model.Movable .up.|> Model.IMovable
Model.Movable o-up- Model.IMovable.Direction : currentDirection
Model.Saab95 -up-|> Model.Car
Model.Scania -up-|> Model.FlatbedTruck
Model.TransportableHolder .up.|> Model.ITransportableHolder
Model.Volvo240 -up-|> Model.Car
Model.Workshop .up.|> Model.ITransportableHolder
Model.Workshop o-- Model.TransportableHolder : transportableHolderParent
Model.IMovable -up-|> Model.IPositionable
Model.ITransportableHolder -up-|> Model.IPositionable
Model.ITransportable -up-|> Model.IMovable

@enduml
